@@ -50,8 +50,9 @@ endif
 override_dh_auto_build:
 	dh_auto_build --sourcedirectory=host
 ifneq ($(filter ubertooth-firmware,$(DOPACKAGES)),)
-	dh_auto_build --sourcedirectory=firmware -- TIMESTAMP="-DTIMESTAMP=''" \
-	  COMPILE_BY="-D'COMPILE_BY=\"user\"'" COMPILE_HOST="-D'COMPILE_HOST=\"localhost\"'" \
+	dh_auto_build --sourcedirectory=firmware --no-parallel -- \
+	  TIMESTAMP="-DTIMESTAMP=''" COMPILE_BY="-D'COMPILE_BY=\"user\"'" \
+	  COMPILE_HOST="-D'COMPILE_HOST=\"localhost\"'" \
 	  GIT_REVISION="-D'GIT_REVISION=\"$(UPSTREAM_PACKAGE_VERSION_ORIGINAL)\"'"
 endif
 	cat debian/ubertooth.pc.in | sed 's/DEB_HOST_MULTIARCH/$(DEB_HOST_MULTIARCH)/' | \
